# awchat

./: .coderabbit.yaml  .gitignore  .mcp.json.example  AGENTS.md  Justfile  RAILWAY.md  README.md  ROADMAP.md  build.gradle.kts  bunfig.toml  detekt.yml  flake.nix  gradle.properties  idea.sh  lefthook.yml  package.json  pyproject.toml  settings.gradle.kts
.cursor/: hooks.json
.cursor/hooks/: agent-turn-coderabbit.sh
.github/: dependabot.yml
.github/workflows/: android.yml  auth.yml  broker.yml  ci.yml  relay.yml
.grok/hooks/: agents-continuity.json  coderabbit-turn.json
.pi/extensions/: coderabbit-turn-gate.ts
android/: build.gradle.kts  detekt.yml
android/build-logic/: build.gradle.kts
android/gradle/: libs.versions.toml
app/: build.gradle.kts
build-logic/convention/: build.gradle.kts
core/crypto/: build.gradle.kts
core/database/: build.gradle.kts
core/network/: build.gradle.kts
core/proto/: build.gradle.kts
desktop/: Cargo.toml
docs/: DESIGN.md
gradle/: libs.versions.toml
ledgers/: roadmap-state.json
ledgers/changes/: 1780877042645.json  1780877054930.json  1780877660487.json  1780877744695.json  1780877980427.json  1780879092851.json  1780882128417.json  1780883221316.json  (+39 more)
plans/: 001-support-and-bug-reporting.md  README.md
scripts/: changelog.ts  update-agents-md.ts
server/auth/apps/gateway/native/awchat_crypto/: Cargo.toml
server/auth/apps/gateway/native/awchat_crypto/examples/: gen_vectors.rs
server/auth/apps/gateway/native/awchat_crypto/src/: lib.rs
tui/: Cargo.toml
web/: bunfig.toml  package.json
(+846 files in other folders)
